--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,14 @@
 # Utiliza una imagen base de Node.js
-FROM node:latest
+FROM node:16-bullseye
 
 # Establece el directorio de trabajo dentro del contenedor
 WORKDIR /app
 
 # Copia los archivos package.json y package-lock.json (si existe)
-COPY package*.json ./
+COPY . .
 
 # Instala las dependencias de la aplicación
 RUN npm install
-
-# Copia el resto de los archivos de la aplicación
-COPY . .
 
 # Expone el puerto en el que la aplicación se ejecuta
 EXPOSE 5000
