--- a/frontend/.env
+++ b/frontend/.env
@@ -6,4 +6,4 @@ REACT_APP_INFLUXDB_ORG = "1e5f0c3c4d62fa0e"
 REACT_APP_INFLUXDB_BUCKET = "Sensores"
 REACT_APP_INFLUXDB_URL = "http://157.88.73.30:8086"
 
-REACT_APP_BACKEND_URL = "https://157.88.73.30:5000"
+REACT_APP_BACKEND_URL = "http://157.88.73.30:5000"
