cambio de url en el backend a la del servidor

--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,9 @@ DB_HOST = localhost
 DB_USER = calidadAire
 DB_PASS = Arquitectur4
 DB_DATABASE = webSensorica
+# DB_USER = root
+# DB_PASS = Balbin0naskaynuri4
+# DB_DATABASE = web_sensorica
 
 
 #Variables para el token
