cambio localhost de mysql por ip del servidor

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,9 @@
 # Variables para la base de datos
-DB_HOST = localhost
+DB_HOST = 157.88.73.29
 DB_USER = calidadAire
 DB_PASS = Arquitectur4
 DB_DATABASE = webSensorica
+# DB_HOST = localhost
 # DB_USER = root
 # DB_PASS = Balbin0naskaynuri4
 # DB_DATABASE = web_sensorica
