cambio ip servidor por localhost en bbdd

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # Variables para la base de datos
-DB_HOST = 157.88.73.29
+DB_HOST = localhost
 DB_USER = calidadAire
 DB_PASS = Arquitectur4
 DB_DATABASE = webSensorica
