--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@ DB_HOST = localhost
 DB_USER = calidadAire
 DB_PASS = Arquitectur4
 DB_DATABASE = webSensorica
+DB_PORT = 3306
 # DB_HOST = localhost
 # DB_USER = root
 # DB_PASS = Balbin0naskaynuri4
